# lavalink-rs

./: .gitignore  Cargo.toml  Dockerfile  README.md  application.example.yml  起動.bat  起動方法.txt
.github/workflows/: ci.yml
crates/audio-pipeline/: Cargo.toml
crates/audio-pipeline/src/: decoder.rs  encoder.rs  error.rs  filters.rs  lib.rs  mpegts.rs  pcm.rs  stream_source.rs  timescale.rs
crates/discord-voice/: Cargo.toml
crates/discord-voice/examples/: voice_smoke.rs
crates/discord-voice/src/: crypto.rs  error.rs  gateway.rs  lib.rs  rtp.rs  udp.rs  video.rs
crates/discord-voice/src/dave/: cryptor.rs  frame.rs  gcm.rs  mls.rs  mod.rs  opcodes.rs  ratchet.rs  session.rs  uleb128.rs  video_frame.rs
crates/player/: Cargo.toml
crates/player/src/: lib.rs
crates/playfile/: Cargo.toml
crates/playfile/src/: main.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs  types.rs  ws.rs
crates/server/: Cargo.toml
crates/server/src/: auth.rs  config.rs  error.rs  lib.rs  main.rs  playback.rs  routes.rs  state.rs  ws.rs
crates/server/tests/: conformance.rs
crates/server/tests/golden/: decodetracks_sample.json  error_session_not_found.json
crates/source-youtube/: Cargo.toml
crates/source-youtube/src/: lib.rs
crates/track-codec/: Cargo.toml
crates/track-codec/src/: lib.rs
docs/: conformance.md  dave_capture_guide.md  dave_status.md  decisions.md  phase0_design_verification.md  video-streaming-plan.md
scripts/: capture_golden.sh
