[package]
name = "lavalink-discord-voice"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Discord Voice Gateway + UDP/RTP 送出 (+ DAVE E2EE)"

[features]
default = []
# DAVE フレーム E2EE 土台（フェーズ3-5b）。ULEB128/フレーム暗号/ラチェット/opcode。
dave = ["dep:aes", "dep:ghash", "dep:hmac", "dep:sha2"]
# MLS グループ管理（フェーズ3-5c, openmls。実機テスト要）。
dave-mls = ["dave", "dep:openmls", "dep:openmls_rust_crypto", "dep:openmls_basic_credential"]

[dependencies]
tokio.workspace = true
tokio-tungstenite = { workspace = true, features = ["rustls-tls-webpki-roots"] }
rustls = { version = "0.23", features = ["ring"] }
futures-util.workspace = true
bytes.workspace = true
serde.workspace = true
serde_json.workspace = true
aes-gcm.workspace = true            # トランスポート + DAVE フレーム AES-128-GCM(8byte tag)
chacha20poly1305.workspace = true
rand.workspace = true
thiserror.workspace = true
tracing.workspace = true

# DAVE 土台用（feature = "dave"）
aes = { version = "0.8", optional = true }
ghash = { version = "0.5", optional = true }
hmac = { version = "0.12", optional = true }
sha2 = { version = "0.10", optional = true }
# MLS（feature = "dave-mls"）
openmls = { workspace = true, optional = true }
openmls_rust_crypto = { version = "0.3", optional = true }
openmls_basic_credential = { version = "0.3", optional = true }

[[example]]
name = "voice_smoke"
path = "examples/voice_smoke.rs"
