[package]
name = "lavalink-source-youtube"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "YouTube 抽出（InnerTube, yt-dlp 非依存）"

[dependencies]
lavalink-protocol.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
